@@ -64,6 +64,8 @@ Revision history for FusionInventory::Agent
          http://forge.fusioninventory.org/issues/583
        * Add VIRTUALMACHINES/MAC key
        * Win32: software, do not ignore software with very few information
+       * Win32: better detection of product key on 64bit system, thanks Ionut Bujor for
+         the feedbacks http://forge.fusioninventory.org/issues/582
 
 2.1.7  Sun, 12 Dec 2010 20:05:16 +01000
        * RPC: Better message if access is denied
